tests/neg/syntax_missing_rparen_hint.baa
// EXPECT: متوقع ')'
// EXPECT: أغلق القوس بإضافة ')'
صحيح الرئيسية() {
    صحيح س = (1 + 2.
    إرجع 0.
}
